deploy/Ingress_deploy/ingress-nginx-service.yaml
# 3. Ingress Service (NodePort or LoadBalancer)
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx
  namespace: prod
spec:
  type: LoadBalancer
  selector:
    app: ingress-nginx
  ports:
  - name: http
    port: 80
    targetPort: 80
  - name: https
    port: 443
    targetPort: 443
