deploy/Ingress_deploy/ingress-route.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wisdomweb-ingress
  namespace: prod
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  # tls:
  # - hosts:
  #    - wisdomweb.local
  #   secretName: wisdomweb-tls
  rules:
    - host: wisdomweb.local
      http:
        paths:
          - path: /()(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: frontend
                port:
                  number: 80

          - path: /backend(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: backend
                port:
                  number: 8080

          - path: /search-engine(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: search-engine
                port:
                  number: 3001

          - path: /crawler(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: crawler
                port:
                  number: 3000

          - path: /keyword-service(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: keyword-service
                port:
                  number: 5000

          - path: /prefix-trie-server(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: prefix-trie-server
                port:
                  number: 3002

          - path: /ai-agent(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: ai-agent
                port:
                  number: 3003
